k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic
spec:
  replicas: 2
  revisionHistoryLimit: 3  # 과거 ReplicaSet 보관 개수
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1         # 배포 중 일시적으로 추가 허용할 파드 수(또는 비율)
      maxUnavailable: 0   # 배포 중 가용 파드가 0개 줄지 않도록
  selector:
    matchLabels:
      app: petclinic
  minReadySeconds: 10 # 새 파드가 'Available'로 간주되기 전 최소 준비 시간
  progressDeadlineSeconds: 600 # 롤아웃이 지연/멈춤으로 판단하는 타임아웃
  template:
    metadata:
      labels:
        app: petclinic
    spec:
      containers:
        - name: petclinic
          image: 514090833954.dkr.ecr.eu-central-1.amazonaws.com/user15_petclinic-repo:16a0a9ccf6cf30cc5a3a4ee38e94ffbf144ea254
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1Gi
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 15
